<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityessentiel3"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:textSize="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textSize="17dp"

        android:text="@string/activityessentiel4"

        />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:text="@string/activityessentiel5"

            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/activityessentiel6"

     />


</LinearLayout>
</ScrollView>