<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/zen"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/bullleisolation1"
        android:textColor="@color/vert"
        android:layout_below="@id/image"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        />

    <DatePicker
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:calendarViewShown="true"
        android:spinnersShown="false"
        android:layout_below="@id/text"
        android:calendarTextColor="@color/vert"
        android:yearListSelectorColor="@color/vert"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" />

    <TimePicker
        android:id="@+id/time_picker"

        android:layout_below="@id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/date_time_set"

        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/bulleisolation3"
        android:layout_marginTop="15dp"
        android:layout_below="@id/time_picker"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonvalider"/>


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/bulleisolation4"
        android:textColor="@color/vert"
        android:layout_below="@id/date_time_set"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/bullleisolation2"
        android:textColor="#000"
        android:layout_below="@id/text1"
        android:layout_marginTop="15dp"
        android:textSize="17sp"
        />

</RelativeLayout>
</ScrollView>